--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,16 +9,20 @@ description = "CLSTM-PPO options trading scaffold (paper-faithful + options adap
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-  "torch>=2.2",          # model + training
+  "torch>=2.2",
   "numpy>=1.24",
   "pandas>=2.1",
-  "gymnasium>=0.29",     # env API
-  "scipy>=1.11",         # turbulence (Mahalanobis), BS bits
-  "pyyaml>=6.0",         # configs
+  "gymnasium>=0.29",
+  "scipy>=1.11",
+  "tyro>=0.7.3",
+  "pyyaml>=6.0",
   "tqdm>=4.66",
-  "matplotlib>=3.7",     # plotting for train/eval PNGs
-  "tensorboard>=2.14",   # monitoring dashboards (free)
-  # Optional: "tyro>=0.7.3" if you later use it for CLIs
+  "requests>=2.31",
+  "pyarrow>=15.0",
+  "python-dateutil>=2.8.2",
+  "pytz>=2024.1",
+  "tenacity>=8.2.3",
+  "python-dotenv>=1.0.1",
 ]
 
 [tool.setuptools]
