--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 APCA_API_KEY_ID=PKEI02LYQURTP5GJD9BE
 APCA_API_SECRET_KEY=Fy08jJR1racXW88rfc0T4oaIPHziWKEDAaNXZruc
+ALPACA_DATA_BASE=https://data.alpaca.markets
